# iRMS

./: .gitignore  AlgebraicDataTransfer.cpp  AlgebraicDataTransfer.h  AlgebraicTransport.cpp  AlgebraicTransport.h  CMakeLists.txt  README.md  TMRSApproxSpaceGenerator.cpp  TMRSApproxSpaceGenerator.h  TMRSDarcyFlowWithMem.cpp  TMRSDarcyFlowWithMem.h  TMRSDarcyFlowWithMem_impl.h  TMRSDarcyMemory.cpp  TMRSDarcyMemory.h  TMRSDataTransfer.cpp  TMRSDataTransfer.h  TMRSMemory.cpp  TMRSMixedAnalysis.cpp  TMRSMixedAnalysis.h  TMRSMultiphaseFlow.h  TMRSMultiphaseFlow_impl.h  TMRSPropertiesFunctions.h  TMRSSFIAnalysis.cpp  TMRSSFIAnalysis.h  TMRSTransportAnalysis.cpp  TMRSTransportAnalysis.h  TPZAlgebraicDataTransfer.cpp  TPZAlgebraicDataTransfer.h  TPZAlgebraicTransport.cpp  TPZAlgebraicTransport.h  TPZAnalysisAuxEigen.cpp  TPZDarcyFlowWithMem.cpp  TPZDarcyFlowWithMem.h  TPZFastCondensedElement.cpp  TPZFastCondensedElement.h  TPZMFSolutionTransfer.cpp  TPZMFSolutionTransfer.h  TPZMHMixedMesh4SpacesControl.cpp  TPZMHMixedMesh4SpacesControl.h  TPZMHMixedMeshWithTransportControl.cpp  (+24 more)
2Elements2Spaces2D/: CMakeLists.txt  main.cpp
BenchmarkCase1/: CMakeLists.txt  RSimulatorConfiguration.cpp  includes.h  main.cpp
Buckley_Levertt/: CMakeLists.txt  main.cpp
CGP/: CGP.cpp  CMakeLists.txt  TPZHdivTransfer.cpp  TPZHdivTransfer.h
CGP/mathematica_notebooks/: PlotGenerator.nb
CTest/: CMakeLists.txt
Common/: CMakeLists.txt  Interpol3RelPerm.cpp  SuperLU.cmake  TMRSApproxSpaceGenerator.cpp  TMRSApproxSpaceGenerator.h  TMRSDarcyFlowWithMem.cpp  TMRSDarcyFlowWithMem.h  TMRSDarcyFlowWithMem_impl.h  TMRSDarcyFractureFlowWithMem.cpp  TMRSDarcyFractureFlowWithMem.h  TMRSDarcyFractureFlowWithMem_impl.h  TMRSDarcyFractureGlueFlowWithMem.cpp  TMRSDarcyFractureGlueFlowWithMem.h  TMRSDarcyMemory.cpp  TMRSDarcyMemory.h  TMRSDataTransfer.cpp  TMRSDataTransfer.h  TMRSMixedAnalysis.cpp  TMRSMixedAnalysis.h  TMRSMultiphaseFlow.h  TMRSMultiphaseFlow_impl.h  TMRSPropertiesFunctions.h  TMRSSFIAnalysis.cpp  TMRSSFIAnalysis.h  TMRSSavable.h  TMRSTransportAnalysis.cpp  TMRSTransportAnalysis.h  TPZAlgebraicDataTransfer.cpp  TPZAlgebraicDataTransfer.h  TPZAlgebraicTransport.cpp  TPZAlgebraicTransport.h  TPZAnalysisAuxEigen.cpp  TPZAnalysisAuxEigen.h  TPZDarcyFlowWithMem.cpp  TPZDarcyFlowWithMem.h  TPZFastCondensedElement.cpp  TPZFastCondensedElement.h  TPZFastestCondensedElement.cpp  TPZFastestCondensedElement.h  TPZMFSolutionTransfer.cpp  (+28 more)
CubicDomainNoFractures/: CMakeLists.txt  cubicnofrac.cpp
DFNIMRS/: CMakeLists.txt  dfnimrs.cpp  log4cxx.cfg
Filling/: CMakeLists.txt  filling.cpp  module.geo  module.json  module.msh  upward-flux.json
FourSpacesTest/: CMakeLists.txt  RSimulatorConfiguration.cpp  RSimulatorConfiguration.h  includes.h  main.cpp
FracMeshes/: Case2Frac.geo  Case2Frac.msh  Case3Frac.msh  CaseCube.msh  Copia de jose_simple.geo  case1_Tetra.msh  case1_simple_5elem.geo  case1_simple_5elem.msh  case1_simple_match.msh  case1_simple_matchnew.msh  case1_simple_p1q0.msh  case1_withFrac.msh  case1_withoutFrac.msh  case_1.geo  case_1.msh  case_1_1k.msh  case_1_ref.msh  case_1bas.msh  embedFrac_coarse.msh  embedFrac_subWithFrac.msh  flem_case1_Coarse_BC.msh  flem_case1_Submesh_Fractures.msh  flem_case2_Coarse_BC_Fractures.geo  jose10_coarse.msh  jose_simple.geo  jose_simple0.msh  jose_simple1.msh  jose_simple2.msh  jose_simple3.msh  jose_simple4.msh  jose_simple5.msh  jose_simple6.msh  jose_simple7.msh  jose_simpleT.msh  jose_simple_inc.msh  simple_tetra.msh
GeoMeshAndPropsGenerator/: CMakeLists.txt  main.cpp
HDivSimple/: CMakeLists.txt  RSimulatorConfiguration.cpp  includes.h  main.cpp
HdivCollapsed/: CMakeLists.txt  SBFemHdiv.cpp  SBFemHdiv.h  TPZCompElHDivSBFem.cpp  TPZCompElHDivSBFem.h  hybridpoissoncollapsed.cpp  hybridpoissoncollapsed.h  mainregular.cpp
LinearTracer/: CMakeLists.txt  RSimulatorConfiguration.cpp  includes.h  main.cpp
MHMSimple/: CMakeLists.txt  main.cpp
MHMTest/: CMakeLists.txt  main.cpp
Mesh_Generator/: Contorno.geo  Contorno.msh  ContornoOk.geo  Contorno[Conflicto].msh  LectorModificado.nb  LectorStruct.nb  LectorStructWithFaults.nb  LectorStructWithFaults2.nb  LectorStructWithFaults3.nb  LectorVersion3.nb  PedroLima.geo  TopeMesh.geo  TopeMesh.txt  contorno_unisim2.txt  funGridModificado.m  funGridStruct.m  funGridVersion3.m  topo_unisim_ii.txt
MonophasicTest/: CMakeLists.txt  RSimulatorConfiguration.h  TPZTracerFlow.cpp  includes.h
OnlyFractures/: CMakeLists.txt  main.cpp
OnlyTwoFractures/: CMakeLists.txt  main.cpp
Paper2D/: CMakeLists.txt  main.cpp
Paper_IMRS/: MeshCube2Frac.geo
PetroPhysics/: krow_linear.txt  krow_quadratic.txt  krow_quadratic2.txt  krow_quadratic2_range.txt  krw_linear.txt  krw_quadratic.txt  krw_quadratic2.txt  krw_quadratic2_range.txt
Reservoir/: CorrectPoints.nb  base18.txt  baseToMod.txt  base_unisim2.txt  base_unisimMOD.txt  topeMOD.txt
SimpleCaseFracture/: CMakeLists.txt  RSimulatorConfiguration.cpp  includes.h  main.cpp
SimpleCaseFractureTwoElements/: CMakeLists.txt  RSimulatorConfiguration.cpp  main.cpp
SimpleCaseOneFracture/: CMakeLists.txt  main.cpp
SimpleCaseThreeFractures/: CMakeLists.txt  RSimulationCase.h  RSimulatorConfiguration.cpp  includes.h  main.cpp
SimpleCaseTwoFractures/: CMakeLists.txt  RSimulatorConfiguration.cpp  includes.h  main.cpp
UnitTests/: CMakeLists.txt  main.cpp  test_main.cpp
UnitTests/TestDFNIMRS/: TestDFNIMRS.cpp
UnitTests/TestFlemischCtePressure/: TestFlemischCtePressure.cpp
UnitTests/TestFracIntersect3D/: TestFracIntersect3D.cpp
UnitTests/TestFracIntersect3DMortar/: TestFracIntersect3DMortar.cpp
UnitTests/TestNoFrac4Spaces/: TestNoFrac4Spaces.cpp
UnitTests/TestOneFracture/: TestOneFrac.cpp
UnitTests/TestOnlyFracIntersec/: TestOnlyFracIntersec.cpp
WANN/: CMakeLists.txt  wann.cpp
check-example2-article/: CMakeLists.txt  checkexample2.cpp  log4cxx.cfg
docs/: Formulation.lyx
gmsh/: AuxFinal.msh  Contorno.msh  Gen_UNISIM.geo  PhysicalEntities.geo  UNISIMT2R4P1p5.msh  UNISIMT3R5P20.msh  UNISIMT5R5P15.msh  UNISIMT6R5P2.msh  UNISIMV_2.msh  UNISIMV_3.msh  UNISIMV_4.msh  (+16 more)
(+591 files in other folders)
